; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_dwarf2.c__bfd_dwarf2_find_nearest_line.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_dwarf2.c__bfd_dwarf2_find_nearest_line.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_bfd_dwarf2_find_nearest_line(i32* %0, i32* %1, i32** %2, i32 %3, i8** %4, i8** %5, i32* %6, i32 %7, i8** %8) #0 {
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32**, align 8
  %13 = alloca i32, align 4
  %14 = alloca i8**, align 8
  %15 = alloca i8**, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i8**, align 8
  store i32* %0, i32** %10, align 8
  store i32* %1, i32** %11, align 8
  store i32** %2, i32*** %12, align 8
  store i32 %3, i32* %13, align 4
  store i8** %4, i8*** %14, align 8
  store i8** %5, i8*** %15, align 8
  store i32* %6, i32** %16, align 8
  store i32 %7, i32* %17, align 4
  store i8** %8, i8*** %18, align 8
  %19 = load i32*, i32** %10, align 8
  %20 = load i32*, i32** %11, align 8
  %21 = load i32, i32* %13, align 4
  %22 = load i32**, i32*** %12, align 8
  %23 = load i8**, i8*** %14, align 8
  %24 = load i8**, i8*** %15, align 8
  %25 = load i32*, i32** %16, align 8
  %26 = load i32, i32* %17, align 4
  %27 = load i8**, i8*** %18, align 8
  %28 = call i32 @find_line(i32* %19, i32* %20, i32 %21, i32* null, i32** %22, i8** %23, i8** %24, i32* %25, i32 %26, i8** %27)
  ret i32 %28
}

declare dso_local i32 @find_line(i32*, i32*, i32, i32*, i32**, i8**, i8**, i32*, i32, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
